fixed rwd on mobile and tablets #skill section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ a:link {
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 100vh 100vh 100vh 100vh 100vh 100vh;
+    grid-template-rows: 100vh 100vh 100vh 100vh 100vh;
     scroll-behavior: smooth;
 }
 
@@ -72,7 +72,7 @@ a:link {
 }
 
 .parallax_image_first {
-    background-image: url('../../assets/img/adventure-climb-clouds-691668.jpg');
+    background-image: linear-gradient(to bottom, rgba(132, 132, 132, 0.6) 0%, rgba(53, 62, 76, 0.6) 100%), url('../../assets/img/adventure-climb-clouds-691668.jpg');
 }
 
 .parallax_image_second {
@@ -103,7 +103,7 @@ a:link {
 }
 
 .left-text {
-    text-shadow: 7px 3px 2px rgb(53, 62, 76);
+    /*text-shadow: 7px 3px 2px rgb(53, 62, 76);*/
     color: #FFFFFF;
 
 }
@@ -262,6 +262,10 @@ a:link {
     opacity: .25;
     animation: pulse 2s linear alternate infinite;
     text-align: center;
+}
+
+#pot {
+    margin-left: -20px;
 }
 
 .caption {
@@ -622,52 +626,40 @@ circle {
     font-family: 'Indie Flower', cursive;
 }
 
-#counterItem1 {
-    grid-column: 1;
-    grid-row: 1;
+.counterItem0 {
     display: grid;
     grid-template-columns: 100px 100px;
     grid-template-rows:  100px;
+}
+
+#counterItem1 {
+    grid-column: 1;
+    grid-row: 1;
 }
 
 #counterItem2 {
     grid-column: 2;
     grid-row: 1;
-    display: grid;
-    grid-template-columns: 100px 100px;
-    grid-template-rows:  100px;
 }
 
 #counterItem3 {
     grid-column: 3;
     grid-row: 1;
-    display: grid;
-    grid-template-columns: 100px 100px;
-    grid-template-rows:  100px;
 }
 
 #counterItem4 {
     grid-column: 1;
     grid-row: 2;
-    display: grid;
-    grid-template-columns: 100px 100px;
-    grid-template-rows:  100px;
 }
 
 #counterItem5 {
     grid-column: 2;
     grid-row: 2;
-    display: grid;
-    grid-template-columns: 100px 100px;
-    grid-template-rows:  100px;
 }
 
 #counterItem6 {
     grid-column: 3;
     grid-row: 2;
-    display: grid;
-    grid-template-columns: 100px 100px;
-    grid-template-rows:  100px;
 }
 
 .skillsText {
@@ -703,6 +695,11 @@ circle {
     grid-row: 1;
     font-size: 100px;
     color: #FFFFFF;
+}
+
+#squarespaceImg {
+    max-width:100px;
+    height: auto;
 }
 
 .fa-html5 {
@@ -806,10 +803,17 @@ circle {
     }
 
     .counterWraper {
+        grid-row: 2/4;
         margin-top: 20px;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-row-gap: 20px;
+    }
+
+    .counterItem0 {
+        display: grid;
+        grid-template-columns: 50px 50px;
+        grid-template-rows:  50px;
     }
 
     #counterItem1 {
@@ -840,6 +844,28 @@ circle {
     #counterItem6 {
         grid-column: 1;
         grid-row: 6;
+    }
+
+    .skillsText {
+        font-size: 50px;
+        margin-top: 7px;
+        bottom: 10px;
+    }
+
+    .count
+    {
+        line-height: unset;
+        margin-left:5px;
+        font-size:50px;
+    }
+
+    .percent {
+        font-size: 50px;
+    }
+
+    #squarespaceImg {
+        max-width:50px;
+        height: auto;
     }
 
 }
